[gd_scene load_steps=6 format=3 uid="uid://3yd06robq3f8"]

[ext_resource type="Script" path="res://Resources/Object/Building/Door/RollingShutter/RollingShutterInteraction.gd" id="1_dpw5o"]
[ext_resource type="PackedScene" uid="uid://c26jswh36g6xu" path="res://Resources/Object/Building/Door/RollingShutter/RollingShutter.glb" id="2_87uai"]
[ext_resource type="Material" uid="uid://cw2tppihttki3" path="res://Resources/Material/WhiteMetalPlate.tres" id="3_eyxsr"]
[ext_resource type="Script" path="res://Resources/Object/Building/Door/RollingShutter/DoorPlateInteraction.gd" id="4_6x5w4"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kgbo7"]
data = PackedVector3Array(2.1, 2.9, -0.1, 1.9, 3.1, -0.1, 1.9, 2.9, -0.1, 2.1, 2.9, -0.1, 2.1, 3.1, -0.1, 1.9, 3.1, -0.1, -1.9, 2.9, 0.1, -2.1, -0.1, 0.1, -2.1, 2.9, 0.1, -1.9, 2.9, 0.1, -1.9, -0.1, 0.1, -2.1, -0.1, 0.1, -2.1, 2.9, -0.1, -2.1, -0.1, 0.1, -2.1, -0.1, -0.1, -2.1, 2.9, -0.1, -2.1, 2.9, 0.1, -2.1, -0.1, 0.1, -2.1, -0.1, 0.1, -1.9, -0.1, -0.1, -2.1, -0.1, -0.1, -2.1, -0.1, 0.1, -1.9, -0.1, 0.1, -1.9, -0.1, -0.1, -1.9, -0.1, -0.1, -2.1, 2.9, -0.1, -2.1, -0.1, -0.1, -1.9, -0.1, -0.1, -1.9, 2.9, -0.1, -2.1, 2.9, -0.1, 2.1, 2.9, 0.1, 2.1, -0.1, -0.1, 2.1, -0.1, 0.1, 2.1, 2.9, 0.1, 2.1, 2.9, -0.1, 2.1, -0.1, -0.1, -2.1, 2.9, -0.1, -2.1, 3.1, 0.1, -2.1, 2.9, 0.1, -2.1, 2.9, -0.1, -2.1, 3.1, -0.1, -2.1, 3.1, 0.1, 2.1, 2.9, 0.1, 1.9, -0.1, 0.1, 1.9, 2.9, 0.1, 2.1, 2.9, 0.1, 2.1, -0.1, 0.1, 1.9, -0.1, 0.1, 1.9, 2.9, -0.1, 1.9, -0.1, 0.1, 1.9, -0.1, -0.1, 1.9, 2.9, -0.1, 1.9, 2.9, 0.1, 1.9, -0.1, 0.1, 1.9, -0.1, 0.1, 2.1, -0.1, -0.1, 1.9, -0.1, -0.1, 1.9, -0.1, 0.1, 2.1, -0.1, 0.1, 2.1, -0.1, -0.1, 2.1, -0.1, -0.1, 1.9, 2.9, -0.1, 1.9, -0.1, -0.1, 2.1, -0.1, -0.1, 2.1, 2.9, -0.1, 1.9, 2.9, -0.1, -1.9, 2.9, 0.1, -1.9, -0.1, -0.1, -1.9, -0.1, 0.1, -1.9, 2.9, 0.1, -1.9, 2.9, -0.1, -1.9, -0.1, -0.1, 1.9, 3.1, 0, 1.9, 3.9, 0.1, 1.9, 3.1, 0.1, 1.9, 3.1, 0, 1.9, 3.9, 0, 1.9, 3.9, 0.1, -1.9, 2.9, -0.1, -2.1, 3.1, -0.1, -2.1, 2.9, -0.1, -1.9, 2.9, -0.1, -1.9, 3.1, -0.1, -2.1, 3.1, -0.1, 2.1, 2.9, 0.1, 2.1, 3.1, -0.1, 2.1, 2.9, -0.1, 2.1, 2.9, 0.1, 2.1, 3.1, 0.1, 2.1, 3.1, -0.1, -2.1, 3.1, 0.1, -2.1, 2.9, 0.9, -2.1, 2.9, 0.1, -2.1, 3.1, 0.1, -2.1, 3.1, 0.9, -2.1, 2.9, 0.9, -1.9, 4, 0.1, -1.9, 4.1, 0.9, -1.9, 4.1, 0.1, -1.9, 4, 0.1, -1.9, 4, 0.9, -1.9, 4.1, 0.9, 2.1, 3.9, 0.1, 2.1, 4.1, -0.1, 2.1, 3.9, -0.1, 2.1, 3.9, 0.1, 2.1, 4.1, 0.1, 2.1, 4.1, -0.1, 2.1, 3.9, -0.1, 1.9, 4.1, -0.1, 1.9, 3.9, -0.1, 2.1, 3.9, -0.1, 2.1, 4.1, -0.1, 1.9, 4.1, -0.1, 2, 3.1, 0.1, 2.1, 3.9, 0.1, 2.1, 3.1, 0.1, 2, 3.1, 0.1, 2, 3.9, 0.1, 2.1, 3.9, 0.1, -2.1, 3.1, -0.1, -2.1, 3.9, 0.1, -2.1, 3.1, 0.1, -2.1, 3.1, -0.1, -2.1, 3.9, -0.1, -2.1, 3.9, 0.1, 2.1, 3.1, -0.1, 1.9, 3.9, -0.1, 1.9, 3.1, -0.1, 2.1, 3.1, -0.1, 2.1, 3.9, -0.1, 1.9, 3.9, -0.1, 2.1, 3.1, 0.1, 2.1, 3.9, -0.1, 2.1, 3.1, -0.1, 2.1, 3.1, 0.1, 2.1, 3.9, 0.1, 2.1, 3.9, -0.1, -1.9, 3.1, -0.1, -2.1, 3.9, -0.1, -2.1, 3.1, -0.1, -1.9, 3.1, -0.1, -1.9, 3.9, -0.1, -2.1, 3.9, -0.1, -1.9, 4.1, 0.1, -2.1, 4.1, -0.1, -1.9, 4.1, -0.1, -1.9, 4.1, 0.1, -2.1, 4.1, 0.1, -2.1, 4.1, -0.1, 2.1, 4.1, 0.1, 1.9, 4.1, -0.1, 2.1, 4.1, -0.1, 2.1, 4.1, 0.1, 1.9, 4.1, 0.1, 1.9, 4.1, -0.1, -1.9, 3.9, -0.1, -2.1, 4.1, -0.1, -2.1, 3.9, -0.1, -1.9, 3.9, -0.1, -1.9, 4.1, -0.1, -2.1, 4.1, -0.1, 1.9, 2.9, -0.1, -1.9, 3.1, -0.1, -1.9, 2.9, -0.1, 1.9, 2.9, -0.1, 1.9, 3.1, -0.1, -1.9, 3.1, -0.1, -1.9, 2.9, -0.1, 1.9, 2.9, 0.1, 1.9, 2.9, -0.1, -1.9, 2.9, -0.1, -1.9, 2.9, 0.1, 1.9, 2.9, 0.1, 1.9, 3, 0.1, 1.9, 2.9, 0.9, 1.9, 2.9, 0.1, 1.9, 3, 0.1, 1.9, 3, 0.9, 1.9, 2.9, 0.9, -2.1, 3.9, -0.1, -2.1, 4.1, 0.1, -2.1, 3.9, 0.1, -2.1, 3.9, -0.1, -2.1, 4.1, -0.1, -2.1, 4.1, 0.1, 2.1, 4.1, 0.1, 1.9, 4.1, 0.9, 1.9, 4.1, 0.1, 2.1, 4.1, 0.1, 2.1, 4.1, 0.9, 1.9, 4.1, 0.9, 2.1, 2.9, 0.9, 2.1, 3.1, 1.1, 2.1, 3.1, 0.9, 2.1, 2.9, 0.9, 2.1, 2.9, 1.1, 2.1, 3.1, 1.1, 2.1, 3.9, 0.9, 2.1, 4.1, 1.1, 2.1, 4.1, 0.9, 2.1, 3.9, 0.9, 2.1, 3.9, 1.1, 2.1, 4.1, 1.1, -2.1, 3.1, 0.9, -2.1, 2.9, 1.1, -2.1, 2.9, 0.9, -2.1, 3.1, 0.9, -2.1, 3.1, 1.1, -2.1, 2.9, 1.1, 2.1, 4.1, 0.9, 1.9, 4.1, 1.1, 1.9, 4.1, 0.9, 2.1, 4.1, 0.9, 2.1, 4.1, 1.1, 1.9, 4.1, 1.1, -2, 3.1, 0.1, -2.1, 3.1, 0.9, -2.1, 3.1, 0.1, -2, 3.1, 0.1, -2, 3.1, 0.9, -2.1, 3.1, 0.9, -2.1, 2.9, 0.1, -1.9, 2.9, 0.9, -1.9, 2.9, 0.1, -2.1, 2.9, 0.1, -2.1, 2.9, 0.9, -1.9, 2.9, 0.9, -2.1, 4.1, 0.1, -2.1, 3.9, 0.9, -2.1, 3.9, 0.1, -2.1, 4.1, 0.1, -2.1, 4.1, 0.9, -2.1, 3.9, 0.9, -1.9, 4.1, 0.1, -2.1, 4.1, 0.9, -2.1, 4.1, 0.1, -1.9, 4.1, 0.1, -1.9, 4.1, 0.9, -2.1, 4.1, 0.9, 2.1, 3.9, 0.1, 2.1, 4.1, 0.9, 2.1, 4.1, 0.1, 2.1, 3.9, 0.1, 2.1, 3.9, 0.9, 2.1, 4.1, 0.9, 2.1, 2.9, 0.1, 2.1, 3.1, 0.9, 2.1, 3.1, 0.1, 2.1, 2.9, 0.1, 2.1, 2.9, 0.9, 2.1, 3.1, 0.9, 1.9, 2.9, 0.1, 2.1, 2.9, 0.9, 2.1, 2.9, 0.1, 1.9, 2.9, 0.1, 1.9, 2.9, 0.9, 2.1, 2.9, 0.9, 2, 3.9, 0.1, 2.1, 3.9, 0.9, 2.1, 3.9, 0.1, 2, 3.9, 0.1, 2, 3.9, 0.9, 2.1, 3.9, 0.9, 1.9, 2.9, 1.1, 2.1, 3.1, 1.1, 2.1, 2.9, 1.1, 1.9, 2.9, 1.1, 1.9, 3.1, 1.1, 2.1, 3.1, 1.1, -2.1, 2.9, 1.1, -1.9, 3.1, 1.1, -1.9, 2.9, 1.1, -2.1, 2.9, 1.1, -2.1, 3.1, 1.1, -1.9, 3.1, 1.1, 1.9, 3.9, 1.1, 2.1, 4.1, 1.1, 2.1, 3.9, 1.1, 1.9, 3.9, 1.1, 1.9, 4.1, 1.1, 2.1, 4.1, 1.1, -2.1, 3.9, 1.1, -1.9, 4.1, 1.1, -1.9, 3.9, 1.1, -2.1, 3.9, 1.1, -2.1, 4.1, 1.1, -1.9, 4.1, 1.1, -1.9, 3, 0.1, 1.9, 2.9, 0.1, -1.9, 2.9, 0.1, -1.9, 3, 0.1, 1.9, 3, 0.1, 1.9, 2.9, 0.1, 1.9, 3.9, -0.1, -1.9, 4.1, -0.1, -1.9, 3.9, -0.1, 1.9, 3.9, -0.1, 1.9, 4.1, -0.1, -1.9, 4.1, -0.1, -2.1, 2.9, 0.9, -1.9, 2.9, 1.1, -1.9, 2.9, 0.9, -2.1, 2.9, 0.9, -2.1, 2.9, 1.1, -1.9, 2.9, 1.1, -2.1, 4.1, 0.9, -2.1, 3.9, 1.1, -2.1, 3.9, 0.9, -2.1, 4.1, 0.9, -2.1, 4.1, 1.1, -2.1, 3.9, 1.1, -1.9, 4.1, -0.1, 1.9, 4.1, 0.1, -1.9, 4.1, 0.1, -1.9, 4.1, -0.1, 1.9, 4.1, -0.1, 1.9, 4.1, 0.1, 1.9, 2.9, 0.9, 2.1, 2.9, 1.1, 2.1, 2.9, 0.9, 1.9, 2.9, 0.9, 1.9, 2.9, 1.1, 2.1, 2.9, 1.1, -2.1, 3.1, 1.1, -1.9, 3.9, 1.1, -1.9, 3.1, 1.1, -2.1, 3.1, 1.1, -2.1, 3.9, 1.1, -1.9, 3.9, 1.1, -1.9, 4.1, 0.9, -2.1, 4.1, 1.1, -2.1, 4.1, 0.9, -1.9, 4.1, 0.9, -1.9, 4.1, 1.1, -2.1, 4.1, 1.1, -2.1, 3.1, 1.1, -2.1, 3.9, 0.9, -2.1, 3.9, 1.1, -2.1, 3.1, 1.1, -2.1, 3.1, 0.9, -2.1, 3.9, 0.9, 1.9, 4.1, 1.1, -1.9, 4.1, 0.9, 1.9, 4.1, 0.9, 1.9, 4.1, 1.1, -1.9, 4.1, 1.1, -1.9, 4.1, 0.9, -1.9, 4.1, 1.1, 1.9, 3.9, 1.1, -1.9, 3.9, 1.1, -1.9, 4.1, 1.1, 1.9, 4.1, 1.1, 1.9, 3.9, 1.1, -1.9, 3.9, 1, -1.9, 3.1, 1.1, -1.9, 3.9, 1.1, -1.9, 3.9, 1, -1.9, 3.1, 1, -1.9, 3.1, 1.1, -1.9, 3, 0.9, 1.9, 2.9, 0.9, 1.9, 3, 0.9, -1.9, 3, 0.9, -1.9, 2.9, 0.9, 1.9, 2.9, 0.9, 2, 3.1, 0.9, 2.1, 3.9, 0.9, 2, 3.9, 0.9, 2, 3.1, 0.9, 2.1, 3.1, 0.9, 2.1, 3.9, 0.9, 1.9, 3.1, 1.1, 2.1, 3.9, 1.1, 2.1, 3.1, 1.1, 1.9, 3.1, 1.1, 1.9, 3.9, 1.1, 2.1, 3.9, 1.1, 1.9, 3.9, 1, 1.9, 3.1, 1.1, 1.9, 3.1, 1, 1.9, 3.9, 1, 1.9, 3.9, 1.1, 1.9, 3.1, 1.1, 2.1, 3.9, 1.1, 2.1, 3.1, 0.9, 2.1, 3.1, 1.1, 2.1, 3.9, 1.1, 2.1, 3.9, 0.9, 2.1, 3.1, 0.9, 1.9, 3.9, 1, -1.9, 3.9, 1.1, 1.9, 3.9, 1.1, 1.9, 3.9, 1, -1.9, 3.9, 1, -1.9, 3.9, 1.1, -1.9, 3.1, 1.1, 1.9, 2.9, 1.1, -1.9, 2.9, 1.1, -1.9, 3.1, 1.1, 1.9, 3.1, 1.1, 1.9, 2.9, 1.1, -1.9, 2.9, 1.1, 1.9, 2.9, 0.9, -1.9, 2.9, 0.9, -1.9, 2.9, 1.1, 1.9, 2.9, 1.1, 1.9, 2.9, 0.9, -1.9, 2.9, 0.1, -1.9, 3, 0.9, -1.9, 3, 0.1, -1.9, 2.9, 0.1, -1.9, 2.9, 0.9, -1.9, 3, 0.9, -1.9, 4.1, 0.1, 1.9, 4, 0.1, -1.9, 4, 0.1, -1.9, 4.1, 0.1, 1.9, 4.1, 0.1, 1.9, 4, 0.1, 1.9, 4.1, 0.1, 1.9, 4, 0.9, 1.9, 4, 0.1, 1.9, 4.1, 0.1, 1.9, 4.1, 0.9, 1.9, 4, 0.9, -1.9, 4.1, 0.9, 1.9, 4, 0.9, 1.9, 4.1, 0.9, -1.9, 4.1, 0.9, -1.9, 4, 0.9, 1.9, 4, 0.9, -1.9, 3.1, 1.1, 1.9, 3.1, 1, 1.9, 3.1, 1.1, -1.9, 3.1, 1.1, -1.9, 3.1, 1, 1.9, 3.1, 1, 2.1, 3.1, 0.1, 2, 3.1, 0.9, 2, 3.1, 0.1, 2.1, 3.1, 0.1, 2.1, 3.1, 0.9, 2, 3.1, 0.9, 1.9, 3.1, 0.1, 2, 3.9, 0.1, 2, 3.1, 0.1, 1.9, 3.1, 0.1, 1.9, 3.9, 0.1, 2, 3.9, 0.1, -2.1, 3.1, 0.9, -2, 3.9, 0.9, -2.1, 3.9, 0.9, -2.1, 3.1, 0.9, -2, 3.1, 0.9, -2, 3.9, 0.9, -2.1, 3.9, 0.1, -2, 3.9, 0.9, -2, 3.9, 0.1, -2.1, 3.9, 0.1, -2.1, 3.9, 0.9, -2, 3.9, 0.9, -2.1, 3.1, 0.1, -2, 3.9, 0.1, -2, 3.1, 0.1, -2.1, 3.1, 0.1, -2.1, 3.9, 0.1, -2, 3.9, 0.1, -1.9, 3.1, 1, 1.9, 3.9, 1, 1.9, 3.1, 1, -1.9, 3.1, 1, -1.9, 3.9, 1, 1.9, 3.9, 1, 2, 3.9, 0.1, 2, 3.1, 0.9, 2, 3.9, 0.9, 2, 3.9, 0.1, 2, 3.1, 0.1, 2, 3.1, 0.9, 1.9, 3, 0.9, -1.9, 3, 0.1, -1.9, 3, 0.9, 1.9, 3, 0.9, 1.9, 3, 0.1, -1.9, 3, 0.1, -1.9, 3.1, -0.1, 1.9, 3.9, -0.1, -1.9, 3.9, -0.1, -1.9, 3.1, -0.1, 1.9, 3.1, -0.1, 1.9, 3.9, -0.1, -1.9, 4, 0.1, 1.9, 4, 0.9, -1.9, 4, 0.9, -1.9, 4, 0.1, 1.9, 4, 0.1, 1.9, 4, 0.9, -2, 3.9, 0.9, -2, 3.1, 0.1, -2, 3.9, 0.1, -2, 3.9, 0.9, -2, 3.1, 0.9, -2, 3.1, 0.1)

[node name="RollingShutterScene" type="StaticBody3D" groups=["Switchable"]]
collision_layer = 3
script = ExtResource("1_dpw5o")

[node name="RollingShutter" parent="." instance=ExtResource("2_87uai")]

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_kgbo7")

[node name="DoorPlate0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
use_collision = true
collision_layer = 9
size = Vector3(4, 1, 0.1)
material = ExtResource("3_eyxsr")

[node name="DoorPlate1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
use_collision = true
collision_layer = 9
size = Vector3(4, 1, 0.1)
material = ExtResource("3_eyxsr")

[node name="DoorPlate2" type="CSGBox3D" parent="." groups=["Interactive"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
use_collision = true
collision_layer = 9
size = Vector3(4, 1, 0.1)
material = ExtResource("3_eyxsr")
script = ExtResource("4_6x5w4")

[node name="LockTipF" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.1)
modulate = Color(1, 1, 1, 0)
text = "ðŸ”’"
font_size = 100
outline_size = 0

[node name="LockTipB" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.1)
modulate = Color(1, 1, 1, 0)
text = "ðŸ”’"
font_size = 100
outline_size = 0
